5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1671_1101.log
== TEST (2019-04-22 21:07:17) 
-- CODE:
vt = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", x kwh e tipo y)

if (y == r) and (vt >= 500):
	conta = vt * 0.44
	print(conta)

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", x kwh e tipo y)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 21:08:14) 
-- CODE:
vt = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", x kwh, " , " e tipo y)

if (y == r) and (vt >= 500):
	conta = vt * 0.44
	print(conta)

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", x kwh, " , " e tipo y)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:15:36) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", x kwh e tipo y)

if (y == r) and (ce >= 500):
	conta = ce * 0.44
	print(conta)

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", x kwh e tipo y)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:22) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", "ce" kwh  e "tipo" y)

if ((y == r) and (ce >= 500)):
	conta = ce * 0.44
	print()

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", "ce" kwh  e "tipo" y)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:45) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce "kwh  e tipo" y)

if ((y == r) and (ce >= 500)):
	conta = ce * 0.44
	print()

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", ce "kwh  e tipo" y)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:47) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce "kwh  e tipo" y)

if ((y == r) and (ce >= 500)):
	conta = ce * 0.44
	print()

	
-- ERROR:
File "XXXX", line 4
    print("Entradas:", ce "kwh  e tipo" y)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:54) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((y == r) and (ce >= 500)):
	conta = ce * 0.44
	print()

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if ((y == r) and (ce >= 500)):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:20) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:24) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:39) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:29:17) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:29:21) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:30:48) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
		conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
		conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))

elif ((y == "I") and (ce <= 5000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
		
elif ((y == "C") and (ce <= 1000):
		conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:32:08) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:32:16) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 8
    elif ((y == "R") and (ce <= 500):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:33:40) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
		conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- ERROR:
File "XXXX", line 25
    print("Valor total: R$", round(conta, 2))
                                            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:34:00) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:34:18) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:34:35) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- EXECUTION TIME:
0.157383
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:34:43) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:34:52) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- EXECUTION TIME:
0.163411
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:41:13) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:26) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- EXECUTION TIME:
0.187297
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:41:31) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:45) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas:", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- EXECUTION TIME:
0.160335
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:47) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas: ", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- OUTPUT:
Entradas:  -56.0 kwh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:43:14) 
-- CODE:
ce = float(input("digite vt: "))
y = input("digite y: ")

print("Entradas: ", ce, "kwh  e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta= ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))

-- EXECUTION TIME:
0.126658
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:46:08) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = (input("Tipo de instalacao:"))
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
    print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
    consumo_total = ce * 0.44
    print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
    consumo_total = ce * 0.55
    print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
    consumo_total = ce * 0.55
    print("Valor total: R$ ", round(consumo_total, 2))


-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:46:17) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = (input("Tipo de instalacao:"))
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
    print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
    consumo_total = ce * 0.44
    print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
    consumo_total = ce * 0.55
    print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
    consumo_total = ce * 0.55
    print("Valor total: R$ ", round(consumo_total, 2))


-- EXECUTION TIME:
0.133595
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$  525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:10) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = (input("Tipo de instalacao:"))
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
  	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 15
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:25) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
  	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 15
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:56) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")

print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
	print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 10
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:51:24) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")

print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
	print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 10
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:51:50) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
	print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 9
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:59:23) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
	print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 9
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:59:35) 
-- CODE:
ce = float(input("Digite o consumo de energia: "))
ti = input("Tipo de instalacao:")
print("Entradas: ", ce, "kWh e tipo",  ti)

if ((ce<0) or (ti != "R") and (ti != "I") and (ti != "C")):
	print("Dados invalidos")
elif ((ti == "R") and (ce<=500)):
   consumo_total = ce * 0.44
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "R") and (ce>500)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce<=5000)):
   consumo_total = ce * 0.55
	print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "I") and (ce>5000)):
   consumo_total = ce * 0.60
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce<=1000)):
   consumo_total = ce * 0.55
   print("Valor total: R$ ", round(consumo_total, 2))
elif ((ti == "C") and (ce>1000)):
   consumo_total = ce * 0.60
	print("Valor total: R$ ", round(consumo_total, 2))
   


-- ERROR:
File "XXXX", line 9
    print("Valor total: R$ ", round(consumo_total, 2))
                                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:14:07) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.145647
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:14:08) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:14:32) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.243306
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:19:03) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas: ", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:19:21) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas: ", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.153851
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:19:38) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas: ", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.123292
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:19:38) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas: ", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:20:34) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:21:24) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.139721
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:37:35) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((t == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:38:41) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:39:01) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.134329
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:39:11) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:39:15) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.156686
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 525.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:41:59) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 20:42:11) 
-- CODE:
ce = float(input(""))
y = input("")
print("Entradas:", ce, "kWh e tipo", y)

if ((ce < 0) or (y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif ((y == "R") and (ce <= 500)):
	conta = ce * 0.44
	print("Valor total: R$", round(conta, 2))
elif ((y == "R") and (ce > 500)):
	conta = ce * 0.65
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce <= 5000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "I") and (ce > 5000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce <= 1000)):
	conta = ce * 0.55
	print("Valor total: R$", round(conta, 2))
elif ((y == "C") and (ce > 1000)):
	conta = ce * 0.60
	print("Valor total: R$", round(conta, 2))
-- EXECUTION TIME:
0.130621
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
